test/org/midica/testfiles/failing/soundfont-file-doesnt-exist.midica
INCLUDE inc/instruments.midica

SOUNDFONT  soundfont.sf2

0 c /4
